fix: navigationのz-indexを追加

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  z-index: 3;
   width: 100%;
   padding: sizeMobile(8px);
   background: linear-gradient(92.61deg, rgba(1, 118, 255, 0.8) 0%, rgba(90, 200, 250, 0.8) 100%);
